--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "ojp-js-sdk",
-  "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "name": "ojp-sdk",
+  "version": "0.9.0",
+  "description": "OJP (Open Journey Planner) Javascript SDK",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT"
+  "keywords": [
+    "ojp",
+    "transit",
+    "mobility",
+    "sbb"
+  ],
+  "author": "Vasile Cotovanu",
+  "license": "MIT",
 }
