--- a/package.json
+++ b/package.json
@@ -14,4 +14,14 @@
   ],
   "author": "Vasile Cotovanu",
   "license": "MIT",
+  "dependencies": {
+    "mapbox-gl": "2.11.0",
+    "xmlbuilder": "15.1.1",
+    "xpath": "0.0.32"
+  },
+  "devDependencies": {
+    "@types/mapbox-gl": "2.7.8",
+    "@types/node": "18.11.9",
+    "typescript": "4.9.3"
+  },
 }
