--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "main": "index.js",
   "name": "ojp-sdk",
   "version": "0.9.0",
   "description": "OJP (Open Journey Planner) Javascript SDK",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [
     "ojp",
