--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   "dependencies": {
     "mapbox-gl": "2.11.0",
     "xmlbuilder": "15.1.1",
-    "xpath": "0.0.32"
+    "xpath": "0.0.32",
+    "cross-fetch": "3.1.5",
+    "xmldom": "0.6.0"
   },
   "devDependencies": {
-    "@types/mapbox-gl": "2.7.8",
     "@types/node": "18.11.9",
+    "@types/mapbox-gl": "2.7.8",
+    "@types/xmldom": "0.1.31",
     "typescript": "4.9.3",
     "watchify": "4.0.0"
   },
