--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2015",
-    "module": "es2020",
+    "target": "ES6",
+    "module": "ES6",
     "declaration": true,
     "outDir": "./lib",
     "strict": true,
