--- a/examples/departures-webapp/package.json
+++ b/examples/departures-webapp/package.json
@@ -20,7 +20,8 @@
     "@angular/router": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "ojp-sdk": "0.9.11"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.6",
