--- a/examples/departures-cli/package.json
+++ b/examples/departures-cli/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ojp-sdk": "0.9.11"
+  },
+  "type": "module"
 }
