--- a/examples/departures-cli/package.json
+++ b/examples/departures-cli/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ojp-sdk": "0.9.11"
+    "ojp-sdk": "0.9.11",
+    "specifier-resolution-node": "1.1.1"
   },
   "type": "module"
 }
