--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@xmldom/xmldom": "0.8.7",
     "xmlbuilder": "15.1.1",
     "xpath": "0.0.32",
-    "cross-fetch": "3.1.5"
+    "cross-fetch": "3.1.5",
+    "sax": "1.3.0",
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "@types/mapbox-gl": "2.7.8",
     "@types/geojson": "7946.0.10",
     "@types/node": "18.11.9",
+    "@types/sax": "1.2.7",
     "@types/xmldom": "0.1.31",
     "typescript": "4.9.3",
     "watchify": "4.0.0"
