--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "tscw": "tsc --watch",
-    "postinstall": "npm run build"
+    "postinstall": "npm install && tsc"
   },
   "repository": {
     "type": "git",
