--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "tscw": "tsc --watch",
-    "postinstall": "npm install && tsc"
+    "tscw": "tsc --watch"
   },
   "repository": {
     "type": "git",
