--- a/examples/trips-pagination/package.json
+++ b/examples/trips-pagination/package.json
@@ -20,7 +20,8 @@
     "@angular/router": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "ojp-sdk": "0.9.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.4",
