--- a/package.json
+++ b/package.json
@@ -24,17 +24,16 @@
   "license": "MIT",
   "dependencies": {
     "@xmldom/xmldom": "0.8.7",
-    "xmlbuilder": "15.1.1",
     "cross-fetch": "3.1.5",
     "sax": "1.3.0",
-    "stream": "0.0.2"
+    "stream": "0.0.2",
+    "xmlbuilder": "15.1.1"
   },
   "devDependencies": {
-    "@types/mapbox-gl": "2.7.8",
     "@types/geojson": "7946.0.10",
+    "@types/jest": "29.5.12",
     "@types/node": "18.11.9",
     "@types/sax": "1.2.7",
-    "@types/jest": "29.5.12",
     "@types/xmldom": "0.1.31",
     "jest": "29.7.0",
     "ts-jest": "29.1.2",
