--- a/package.json
+++ b/package.json
@@ -22,28 +22,17 @@
   ],
   "author": "Vasile Cotovanu",
   "license": "MIT",
-  "peerDependencies": {
-    "sax-ts": "1.2.13",
-    "@types/geojson": "7946.0.10",
-    "@types/sax": "1.2.7"
-  },
   "dependencies": {
-    "@xmldom/xmldom": "0.8.7",
-    "cross-fetch": "3.1.5",
-    "sax": "1.3.0",
-    "stream": "0.0.2",
-    "xmlbuilder": "15.1.1"
+    "axios": "1.8.1",
+    "fast-xml-parser": "5.0.8"
   },
   "devDependencies": {
-    "@types/jest": "29.5.12",
-    "@types/node": "18.11.9",
-    "@types/xmldom": "0.1.31",
-    "jest": "29.7.0",
-    "ts-jest": "29.1.2",
-    "typescript": "4.9.3",
-    "watchify": "4.0.0"
-  },
-  "files": [
-    "lib/**/*"
-  ]
+    "@types/node": "22.13.9",
+    "jest": "29.6.1",
+    "openapi-typescript": "6.2.2",
+    "ts-jest": "29.1.1",
+    "typescript": "5.8.2",
+    "swagger-cli": "4.0.4",
+    "js-yaml": "4.1.0"
+  }
 }
