--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ojp-sdk",
   "description": "OJP (Open Journey Planner) Javascript SDK",
-  "main": "lib/index.js",
   "version": "0.17.1",
   "type": "module",
+  "main": "lib/index.cjs",
+  "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest",
