--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
-    "module": "ES2020",
-    "lib": ["DOM", "ES2018"],
-    "declaration": true,
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "lib": ["DOM", "ES2020"],
+
+    "rootDir": "src",
     "outDir": "./lib",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "moduleResolution": "node",
-    "skipLibCheck": true
+
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+
+    // Ensures .d.ts files are generated.
+    "declaration": true,
+    // Ensures JavaScript files are also emitted.
+    "emitDeclarationOnly": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
