Make type array required

--- a/openapi/ojp-location-request.yaml
+++ b/openapi/ojp-location-request.yaml
@@ -29,6 +29,8 @@ components:
       type: object
       xml:
         name: PlaceParam
+      required:
+        - type
       properties:
         type:
           type: array
