--- a/examples/ojp-playground/package.json
+++ b/examples/ojp-playground/package.json
@@ -21,7 +21,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0",
-    "ojp-sdk": "0.9.32"
+    "ojp-sdk": "../../lib"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.4",
