--- a/openapi/shared.yml
+++ b/openapi/shared.yml
@@ -110,4 +110,425 @@ components:
             name: Language
             namespace: "http://www.siri.org.uk/siri"
             prefix: siri
+
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__PointOfInterestCategoryStructure
+    PointOfInterestCategory:
+      type: object
+      xml:
+        name: PointOfInterestCategory  
+      properties:
+        osmTag:
+          type: object
+          required:
+            - tag
+            - value
+          properties:
+            tag:
+              type: string
+              xml:
+                name: Tag
+            value:
+              type: string
+              xml:
+                name: Value
+          xml:
+            name: OsmTag
+
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__StopPointStructure
+    StopPoint:
+      type: object
+      xml:
+        name: StopPoint
+      required:
+        - stopPointRef
+        - stopPointName
+      properties:
+        stopPointRef:
+          type: string
+          xml:
+            name: StopPointRef
+        stopPointName:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: StopPointName
+        plannedQuay:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: PlannedQuay
+        estimatedQuay:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: EstimatedQuay
+
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__StopPlaceStructure
+    StopPlace:
+      type: object
+      xml:
+        name: StopPoint
+      required:
+        - stopPointRef
+        - stopPointName
+      properties:
+        stopPlaceRef:
+          type: string
+          xml:
+            name: StopPlaceRef
+        stopPlaceName:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: StopPlaceName
+
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__TopographicPlaceStructure
+    TopographicPlace:
+      type: object
+      xml:
+        name: StopPoint
+      required:
+        - topographicPlaceCode
+        - topographicPlaceName
+      properties:
+        topographicPlaceCode:
+          type: string
+          xml:
+            name: TopographicPlaceCode
+        topographicPlaceName:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: TopographicPlaceName
+
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__PointOfInterestStructure
+    PointOfInterest:
+      type: object
+      xml:
+        name: PointOfInterest
+      required:
+        - publicCode
+        - name
+        - pointOfInterestCategory
+      properties:
+        publicCode:
+          type: string
+          xml:
+            name: PublicCode
+        name:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: Name
+        pointOfInterestCategory:
+          type: array
+          xml:
+            name: PointOfInterestCategory
+          items:
+            $ref: "#/components/schemas/PointOfInterestCategory"
+        topographicPlaceRef:
+          type: string
+          xml:
+            name: TopographicPlaceRef
+
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__AddressStructure
+    Address:
+      type: object
+      xml:
+        name: Address
+      required:
+        - publicCode
+        - name
+      properties:
+        publicCode:
+          type: string
+          xml:
+            name: PublicCode
+        name:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: Name
+        postCode:
+          type: string
+          xml:
+            name: PostCode
+        topographicPlaceName:
+          type: string
+          xml:
+            name: TopographicPlaceName
+        TopographicPlaceRef:
+          type: string
+          xml:
+            name: topographicPlaceRef
+        Street:
+          type: string
+          xml:
+            name: street
+        HouseNumber:
+          type: string
+          xml:
+            name: houseNumber
     
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__PlaceStructure
+    Place:
+      type: object
+      xml:
+        name: Place
+      required:
+        - name
+        - geoPosition
+        - mode
+      properties:
+        stopPoint:
+          $ref: '#/components/schemas/StopPoint'
+          xml:
+            name: StopPoint
+        stopPlace:
+          $ref: '#/components/schemas/StopPlace'
+          xml:
+            name: StopPlace
+        topographicPlace:
+          $ref: '#/components/schemas/TopographicPlace'
+          xml:
+            name: TopographicPlace
+        pointOfInterest:
+          $ref: '#/components/schemas/PointOfInterest'
+          xml:
+            name: PointOfInterest
+        address:
+          $ref: '#/components/schemas/Address'
+          xml:
+            name: Address
+        name:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: Name
+        geoPosition:
+          $ref: '#/components/schemas/GeoPosition'
+          xml:
+            name: GeoPosition
+        mode:
+          type: array
+          xml:
+            name: PtMode
+          items:
+            $ref: '#/components/schemas/VehicleModesOfTransportEnum'
+
+    SharedServiceArrivalDeparture:
+      type: object
+      xml:
+        name: SharedServiceArrivalDeparture
+        wrapped: false
+      required:
+        - timetabledTime
+      properties:
+        timetabledTime:
+          type: string
+          xml:
+            name: TimetabledTime
+        estimatedTime:
+          type: string
+          xml:
+            name: EstimatedTime
+
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__LegBoardStructure
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__CallAtStopStructure
+    CallAtStop:
+      type: object
+      xml:
+        name: CallAtStop
+      properties:
+        stopPointRef:
+          type: string
+          xml:
+            name: StopPointRef
+        stopPointName:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: StopPointName
+        nameSuffix:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: NameSuffix
+        plannedQuay:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: PlannedQuay
+        estimatedQuay:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: EstimatedQuay
+        serviceArrival:
+          $ref: '#/components/schemas/SharedServiceArrivalDeparture'
+          xml:
+            name: ServiceArrival
+        serviceDeparture:
+          $ref: '#/components/schemas/SharedServiceArrivalDeparture'
+          xml:
+            name: ServiceDeparture
+        order:
+          type: number
+          xml:
+            name: Order
+        requestStop:
+          type: boolean
+          xml:
+            name: RequestStop
+        unplannedStop:
+          type: boolean
+          xml:
+            name: UnplannedStop
+        notServicedStop:
+          type: boolean
+          xml:
+            name: NotServicedStop
+        noBoardingAtStop:
+          type: boolean
+          xml:
+            name: NoBoardingAtStop
+        noAlightingAtStop:
+          type: boolean
+          xml:
+            name: NoAlightingAtStop
+    # SharedLegSection
+
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#group_ojp__ModeGroup
+    Mode:
+      type: object
+      xml:
+        name: Mode
+      required:
+        - ptMode
+        - name
+        - shortName
+      properties:
+        ptMode:
+          type: string
+          xml:
+            name: PtMode
+        railSubmode:
+          type: string
+          xml:
+            name: RailSubmode
+        name:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: Name
+        shortName:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: ShortName
+
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__ProductCategoryStructure
+    ProductCategory:
+      type: object
+      properties:
+        name:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: Name
+        shortName:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: ShortName
+        productCategoryRef:
+          type: string
+          xml:
+            name: ProductCategoryRef
+
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__GeneralAttributeStructure
+    GeneralAttribute:
+      type: object
+      xml:
+        name: Attribute
+      required:
+        - userText
+        - code
+      properties:
+        userText:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: UserText
+        code:
+          type: string
+          xml:
+            name: Code
+
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__DatedJourneyStructure
+    DatedJourney:
+      type: object
+      xml:
+        name: Service
+      required:
+        - operatingDayRef
+        - journeyRef
+        - lineRef
+        - mode
+        - attribute
+        - publishedServiceName
+      properties:
+        conventionalModeOfOperation:
+          type: string
+          xml:
+            name: ConventionalModeOfOperation
+        operatingDayRef:
+          type: string
+          xml:
+            name: OperatingDayRef
+        journeyRef:
+          type: string
+          xml:
+            name: JourneyRef
+        publicCode:
+          type: string
+          xml:
+            name: PublicCode
+        lineRef:
+          type: string
+          xml:
+            name: LineRef
+        directionRef:
+          type: string
+          xml:
+            name: DirectionRef
+        mode:
+          $ref: '#/components/schemas/Mode'
+          xml:
+            name: Mode
+        productCategory:
+          $ref: '#/components/schemas/ProductCategory'
+          xml:
+            name: ProductCategory
+        publishedServiceName:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: PublishedServiceName
+        trainNumber:
+          type: string
+          xml:
+            name: TrainNumber
+        attribute:
+          type: array
+          xml:
+            name: Attribute
+          items:
+            $ref: "#/components/schemas/GeneralAttribute"
+        operatorRef:
+          type: string
+          xml:
+            name: OperatorRef
+        destinationStopPointRef:
+          type: string
+          xml:
+            name: DestinationStopPointRef
+        destinationText:
+          $ref: '#/components/schemas/InternationalText'
+          xml:
+            name: 
+        unplanned:
+          type: boolean
+          xml:
+            name: Unplanned
+        cancelled:
+          type: boolean
+          xml:
+            name: Cancelled
+        deviation:
+          type: boolean
+          xml:
+            name: Deviation
+    # DatedJourney
