--- a/openapi/ojp-trip-response.yaml
+++ b/openapi/ojp-trip-response.yaml
@@ -24,150 +24,13 @@ paths:
 
 components:
   schemas:
-    SharedServiceArrivalDeparture:
-      type: object
-      xml:
-        name: SharedServiceArrivalDeparture
-        wrapped: false
-      required:
-        - timetabledTime
-      properties:
-        timetabledTime:
-          type: string
-          xml:
-            name: TimetabledTime
-        estimatedTime:
-          type: string
-          xml:
-            name: EstimatedTime
-    
-    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#group_ojp__ModeGroup
-    Mode:
-      type: object
-      xml:
-        name: Mode
-      required:
-        - ptMode
-        - name
-        - shortName
-      properties:
-        ptMode:
-          type: string
-          xml:
-            name: PtMode
-        railSubmode:
-          type: string
-          xml:
-            name: RailSubmode
-        name:
-          $ref: './shared.yml#/components/schemas/InternationalText'
-          xml:
-            name: Name
-        shortName:
-          $ref: './shared.yml#/components/schemas/InternationalText'
-          xml:
-            name: ShortName
-
-    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__ProductCategoryStructure
-    ProductCategory:
-      type: object
-      properties:
-        name:
-          $ref: './shared.yml#/components/schemas/InternationalText'
-          xml:
-            name: Name
-        shortName:
-          $ref: './shared.yml#/components/schemas/InternationalText'
-          xml:
-            name: ShortName
-        productCategoryRef:
-          type: string
-          xml:
-            name: ProductCategoryRef
-
-    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__GeneralAttributeStructure
-    GeneralAttribute:
-      type: object
-      xml:
-        name: Attribute
-      required:
-        - userText
-        - code
-      properties:
-        userText:
-          $ref: './shared.yml#/components/schemas/InternationalText'
-          xml:
-            name: UserText
-        code:
-          type: string
-          xml:
-            name: Code
-
-    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__LegBoardStructure
-    SharedLegSection:
-      type: object
-      properties:
-        stopPointRef:
-          type: string
-          xml:
-            name: StopPointRef
-        stopPointName:
-          $ref: './shared.yml#/components/schemas/InternationalText'
-          xml:
-            name: StopPointName
-        nameSuffix:
-          $ref: './shared.yml#/components/schemas/InternationalText'
-          xml:
-            name: NameSuffix
-        plannedQuay:
-          $ref: './shared.yml#/components/schemas/InternationalText'
-          xml:
-            name: PlannedQuay
-        estimatedQuay:
-          $ref: './shared.yml#/components/schemas/InternationalText'
-          xml:
-            name: EstimatedQuay
-        serviceArrival:
-          $ref: '#/components/schemas/SharedServiceArrivalDeparture'
-          xml:
-            name: ServiceArrival
-        serviceDeparture:
-          $ref: '#/components/schemas/SharedServiceArrivalDeparture'
-          xml:
-            name: ServiceDeparture
-        order:
-          type: number
-          xml:
-            name: Order
-        requestStop:
-          type: boolean
-          xml:
-            name: RequestStop
-        unplannedStop:
-          type: boolean
-          xml:
-            name: UnplannedStop
-        notServicedStop:
-          type: boolean
-          xml:
-            name: NotServicedStop
-        noBoardingAtStop:
-          type: boolean
-          xml:
-            name: NoBoardingAtStop
-        noAlightingAtStop:
-          type: boolean
-          xml:
-            name: NoAlightingAtStop
-    # SharedLegSection
-    
     # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__LegBoardStructure
     LegBoard:
       type: object
       xml:
         name: LegBoard
       allOf:
-        - $ref: "#/components/schemas/SharedLegSection"
+        - $ref: './shared.yml#/components/schemas/CallAtStop'
       required:
         - stopPointRef
         - stopPointName
@@ -178,7 +41,7 @@ components:
       xml:
         name: LegIntermediate
       allOf:
-        - $ref: "#/components/schemas/SharedLegSection"
+        - $ref: './shared.yml#/components/schemas/CallAtStop'
       required:
         - stopPointRef
         - stopPointName
@@ -190,7 +53,7 @@ components:
       xml:
         name: LegAlight
       allOf:
-        - $ref: "#/components/schemas/SharedLegSection"
+        - $ref: './shared.yml#/components/schemas/CallAtStop'
       required:
         - stopPointRef
         - stopPointName
@@ -269,90 +132,6 @@ components:
           xml:
             name: TrackSection
 
-    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__DatedJourneyStructure
-    DatedJourney:
-      type: object
-      xml:
-        name: Service
-      required:
-        - operatingDayRef
-        - journeyRef
-        - lineRef
-        - mode
-        - attribute
-        - publishedServiceName
-      properties:
-        conventionalModeOfOperation:
-          type: string
-          xml:
-            name: ConventionalModeOfOperation
-        operatingDayRef:
-          type: string
-          xml:
-            name: OperatingDayRef
-        journeyRef:
-          type: string
-          xml:
-            name: JourneyRef
-        publicCode:
-          type: string
-          xml:
-            name: PublicCode
-        lineRef:
-          type: string
-          xml:
-            name: LineRef
-        directionRef:
-          type: string
-          xml:
-            name: DirectionRef
-        mode:
-          $ref: '#/components/schemas/Mode'
-          xml:
-            name: Mode
-        productCategory:
-          $ref: '#/components/schemas/ProductCategory'
-          xml:
-            name: ProductCategory
-        publishedServiceName:
-          $ref: './shared.yml#/components/schemas/InternationalText'
-          xml:
-            name: PublishedServiceName
-        trainNumber:
-          type: string
-          xml:
-            name: TrainNumber
-        attribute:
-          type: array
-          xml:
-            name: Attribute
-          items:
-            $ref: "#/components/schemas/GeneralAttribute"
-        operatorRef:
-          type: string
-          xml:
-            name: OperatorRef
-        destinationStopPointRef:
-          type: string
-          xml:
-            name: DestinationStopPointRef
-        destinationText:
-          $ref: './shared.yml#/components/schemas/InternationalText'
-          xml:
-            name: 
-        unplanned:
-          type: boolean
-          xml:
-            name: Unplanned
-        cancelled:
-          type: boolean
-          xml:
-            name: Cancelled
-        deviation:
-          type: boolean
-          xml:
-            name: Deviation
-
     # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__ContinuousServiceStructure
     ContinuousService:
       type: object
@@ -396,7 +175,7 @@ components:
           xml:
             name: LegAlight
         service:
-          $ref: '#/components/schemas/DatedJourney'
+          $ref: './shared.yml#/components/schemas/DatedJourney'
           xml:
             name: Service
         legTrack:
