--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
   },
   "devDependencies": {
     "@types/node": "22.13.9",
-    "jest": "29.6.1",
+    "jest": "29.7.0",
     "openapi-typescript": "6.2.2",
     "ts-jest": "29.1.1",
     "typescript": "5.8.2",
     "swagger-cli": "4.0.4",
-    "js-yaml": "4.1.0"
+    "js-yaml": "4.1.0",
+    "ts-node": "10.9.2",
+    "@types/jest": "29.5.14"
   }
 }
