--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "swagger-cli": "4.0.4",
     "js-yaml": "4.1.0",
     "ts-node": "10.9.2",
-    "@types/jest": "29.5.14"
+    "@types/jest": "29.5.14",
+    "@types/geojson": "7946.0.16"
   }
 }
