--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "fast-xml-parser": "5.0.8"
   },
   "devDependencies": {
+    "@types/geojson": "7946.0.16",
+    "@types/jest": "^29.5.14",
     "@types/node": "22.13.9",
     "jest": "29.7.0",
     "openapi-typescript": "6.2.2",
@@ -42,7 +44,5 @@
     "swagger-cli": "4.0.4",
     "js-yaml": "4.1.0",
     "ts-node": "10.9.2",
-    "@types/jest": "29.5.14",
-    "@types/geojson": "7946.0.16"
   }
 }
