--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "@types/jest": "^29.5.14",
     "@types/node": "22.13.9",
     "jest": "29.7.0",
-    "openapi-typescript": "6.2.2",
-    "ts-jest": "29.1.1",
-    "typescript": "5.8.2",
-    "swagger-cli": "4.0.4",
     "js-yaml": "4.1.0",
+    "openapi-typescript": "6.2.2",
+    "swagger-cli": "4.0.4",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
+    "typescript": "5.8.2"
   }
 }
