--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "description": "OJP (Open Journey Planner) Javascript SDK",
   "version": "0.20.2",
   "type": "module",
-  "main": "lib/index.cjs",
-  "module": "lib/index.js",
+  "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "exports": {
-    "require": "./lib/index.cjs",
     "import": "./lib/index.js"
   },
   "files": ["lib/**/*"],
