--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "swagger-cli": "4.0.4",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "tsup": "8.4.0"
   }
 }
