--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "jest",
     "build": "rm -rf lib && tsup src/index.ts --dts --format esm,cjs --out-dir lib",
-    "dev": "tsc --watch",
+    "dev": "tsup src/index.ts --dts --format esm,cjs --out-dir lib --watch",
     "build:models": "bash scripts/generate_models.sh"
   },
   "repository": {
