lir: add mode filter to PlaceParam

--- a/openapi/ojp-location-request.yaml
+++ b/openapi/ojp-location-request.yaml
@@ -24,6 +24,23 @@ paths:
 
 components:
   schemas:
+    # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__ModeAndModeOfOperationFilterStructure
+    ModeAndModeOfOperationFilter:
+      type: object
+      xml:
+        name: ModeAndModeOfOperationFilter
+      properties:
+        exclude:
+          type: boolean
+          xml:
+            name: Exclude
+        ptMode:
+          type: array
+          xml:
+            name: PtMode
+          items:
+            $ref: './shared.yml#/components/schemas/VehicleModesOfTransportEnum'
+
     # https://vdvde.github.io/OJP/develop/documentation-tables/ojp.html#type_ojp__PlaceParamStructure
     PlaceParam:
       type: object
@@ -42,6 +59,12 @@ components:
           type: number
           xml:
             name: NumberOfResults
+        modeAndModeOfOperationFilter:
+          type: array
+          xml:
+            name: ModeAndModeOfOperationFilter
+          items:
+            $ref: "#/components/schemas/ModeAndModeOfOperationFilter"
         includePtModes:
           type: boolean
           xml:
@@ -153,4 +176,3 @@ components:
                   $ref: '#/components/schemas/OJPLocationInformationRequest'
                   xml:
                     name: OJPLocationInformationRequest              
-        
