--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "1.8.3",
-    "fast-xml-parser": "5.0.8"
+    "fast-xml-parser": "5.0.8",
+    "ojp-shared-types": "0.0.2"
   },
   "devDependencies": {
     "@types/geojson": "7946.0.16",
