--- a/examples/ojp-playground/package.json
+++ b/examples/ojp-playground/package.json
@@ -21,6 +21,8 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0",
+    
+    "ojp-shared-types": "0.0.6",
     "ojp-sdk": "../../lib"
   },
   "devDependencies": {
