Point to the root level of the package

--- a/examples/ojp-playground/package.json
+++ b/examples/ojp-playground/package.json
@@ -23,7 +23,7 @@
     "zone.js": "~0.13.0",
     
     "ojp-shared-types": "0.0.6",
-    "ojp-sdk": "../../lib"
+    "ojp-sdk": "../.."
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.4",
