--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "test": "jest",
     "build": "rm -rf lib && tsup src/index.ts --dts --format esm,cjs --out-dir lib",
-    "dev": "tsup src/index.ts --dts --format esm,cjs --out-dir lib --watch"
+    "dev": "tsup src/index.ts --dts --format esm,cjs --out-dir lib --watch",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
