--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "axios": "1.8.3",
     "fast-xml-parser": "5.0.8",
-    "ojp-shared-types": "0.0.23"
+    "ojp-shared-types": "github:openTdataCH/ojp-shared-types#feature/updates-api"
   },
   "devDependencies": {
     "@types/geojson": "7946.0.16",
