--- a/examples/ojp-playground/package.json
+++ b/examples/ojp-playground/package.json
@@ -22,7 +22,7 @@
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0",
     
-    "ojp-shared-types": "github:openTdataCH/ojp-shared-types#feature/updates-api",
+    "ojp-shared-types": "0.1.1",
     "ojp-sdk": "../.."
   },
   "devDependencies": {
