--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
     "typescript": "5.8.2",
-    "tsup": "8.4.0"
+    "tsup": "8.4.0",
+    "typedoc": "0.28.17",
+    "typedoc-plugin-markdown": "4.10.0"
   }
 }
